# surprisal-orchestrator

./: .gitignore  CONTRIBUTING.md  Dockerfile  README-zh.md  README.md  cpcc_submission_60_pages.txt  docker-compose.yml  main.py  pyproject.toml  requirements.txt
core/: database.py  models.py  security.py
docs/: Architecture-zh.md  Architecture.md  DataPipeline-zh.md  DataPipeline.md  PRD-zh.md  PRD.md  UserWorkflow-zh.md  UserWorkflow.md
providers/: base.py  docker.py  http.py
repositories/: bounty_repository.py
routes/: __init__.py  accounts.py  auth.py  bounties.py
scripts/: export_openapi.py  generate_cpcc_submission.sh  run_tests.sh
services/: bounty_service.py  content_filter.py  credit_service.py  execution.py  safety.py
tests/: test_accounts_routes.py  test_bounty_delete.py  test_bounty_lifecycle.py  test_bounty_search.py  test_bounty_service.py  test_bounty_solution.py  test_bounty_validation.py  test_execution.py  test_node_coordinator.py  test_rate_limit.py
